carpeta img lista

--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
 </head>
 <body>
     <div class="contendor">
-        <div class="suelo">
-
-        </div>
-        <div class="dino">
-
-        </div>
+        <div class="suelo"></div>
+        <div class="dino"></div>
         <div class="score">0</div>
     </div>
 
