--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Juego de dinosaurio</title>
 </head>
 <body>
-    <div class="contendor">
+    <div class="contenedor">
         <div class="suelo"></div>
-        <div class="dino"></div>
+        <div class="dino dino-corriendo"></div>
         <div class="score">0</div>
     </div>
 
