--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Juego de dinosaurio</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="contenedor">
-        <div class="suelo"></div>
-        <div class="dino dino-corriendo"></div>
-        <div class="score">0</div>
+      <div class="suelo"></div>
+      <div class="dino dino-corriendo"></div>
+      <div class="score">0</div>
     </div>
 
     <div class="game-over">GAME OVER</div>
 
-
-
     <script src="script.js"></script>
-
-</body>
+  </body>
 </html>
